<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quizbee.QuestionsActivity">



    <RadioGroup
        android:id="@+id/answersgrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerVertical="true"
        android:clickable="true"

        android:minWidth="48dp"
        android:focusable="true">



        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/a" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/b" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/c" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/d" />

    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answersgrp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/shapenextbutton"
        android:shadowColor="@android:color/transparent"
        android:text="@string/next_question"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/buttonquit"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shapestart"
        android:shadowColor="@android:color/transparent"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tvque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answersgrp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="52dp"
        android:text="@string/questions"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textAppearance="@color/abc_background_cache_hint_selector_material_dark"
        android:text="@string/your_score"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textAppearance="@color/abc_background_cache_hint_selector_material_dark"
        android:id="@+id/textView4"
        android:text="@string/zero"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:textSize="19sp"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:textSize="30sp"
        android:layout_marginStart="7dp" />

</RelativeLayout>
